Corrected homework3
Removed extra padding in footer-logo; changed margin instead of padding in header; changed margin intead of padding in portfolio; removed extra div in portfolio; removed px in line-height

--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,7 @@ body{
 .logo {
     display: inline-block;
     text-decoration: none;
-    padding-right: 93px;
+    margin-right: 93px;
 
     font-family: 'Raleway', variable;
     font-size: 26px;
@@ -123,7 +123,7 @@ body{
     padding-bottom: 32px;
 
     font-weight: 500;
-    line-height: 1.14px;
+    line-height: 1.14;
     letter-spacing: 0.02em;
     color: var(--primery-title-color);
 }
@@ -221,6 +221,7 @@ body{
 .button-list {
     display: flex;
     justify-content: center;
+    margin-bottom: 34px;
 }
 
 .button-list .item:not(:last-child){
@@ -269,14 +270,10 @@ body{
     border: 1px solid #EEEEEE;
 }
 
-.project-examples .text {
-    margin: 0;
-}
-
 .footer-logo{
     display: inline-block;
-    padding-top: 0;
-    padding-bottom: 0;
+    margin-right: 0;
+    padding: 0;
     margin-bottom: 20px;
     color: var(--primary-white-color);
 }
@@ -315,6 +312,10 @@ body{
     line-height: 1.88;
 }
 
+.project-examples .text {
+    margin: 0;
+}
+
 .address-text{
     margin-bottom: 9px;
     font-style: normal;
@@ -323,16 +324,14 @@ body{
 }
 
 .container{
-    width: 1200px;
+    max-width: 1200px;
     padding-left: 15px;
     padding-right: 15px;
     margin: 0 auto;
-
 }
 .section{
     padding-top: 94px;
     padding-bottom: 94px;
-
 }
 
 .hero-container{
